# EdgeVision

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  agents.md  docker-compose.yml  makefile
src/app/tests/: CMakeLists.txt
src/app/tests/runtime/: ViewerDebugSession.cpp  ViewerFrameDumper.cpp  ViewerPoseSeeder.cpp
src/builder/: CMakeLists.txt
src/builder/include/builder/: SceneBuilderRunner.hpp
src/builder/include/builder/types/: runner.hpp
src/builder/src/: SceneBuilderRunner.cpp
src/builder/src/include/builder/state/: InfiniTamBuilderContext.hpp  InfiniTamPipeline.hpp  SceneBuilder.hpp
src/builder/src/include/builder/types/: BuildStepResult.hpp  SceneBuilderConfig.hpp  frame_build.hpp
src/builder/src/include/builder/utils/: InfiniTamViewConverter.hpp
src/builder/src/state/: InfiniTamBuilderContext.cpp  InfiniTamPipeline.cpp  SceneBuilder.cpp
src/builder/src/utils/: InfiniTamViewConverter.cpp
src/builder/tests/: CMakeLists.txt
src/builder/tests/builder/: SceneBuilder.cpp  SceneBuilderRunner.cpp  test_frames.hpp
src/capture/: CMakeLists.txt
src/capture/include/: CameraCapture.hpp  FrameBuilder.hpp
src/capture/include/capture/: Camera.hpp  Frame.hpp
src/capture/include/capture/camera/: CameraCapture.hpp
src/capture/include/capture/config/: K4aConfig.hpp
src/capture/include/capture/frame/: FrameIngestorRunner.hpp  K4aFrameBuilder.hpp
src/capture/include/capture/frame/types/: build_result.hpp  ingest_result.hpp  runner_status.hpp
src/capture/include/capture/interfaces/: K4aInterface.hpp
src/capture/include/interfaces/: CameraInterface.hpp  k4a.hpp
src/capture/src/: Camera.cpp  CameraCapture.cpp  Frame.cpp  FrameBuilder.cpp
src/capture/src/camera/: CameraCapture.cpp
src/capture/src/config/: K4aConfig.cpp
src/capture/src/frame/: FrameIngestor.cpp  FrameIngestorRunner.cpp  K4aFrameBuilder.cpp
src/capture/src/frame/resources/: CaptureHandle.cpp  ImageHandle.cpp  TransformationHandle.cpp
src/capture/src/frame/utils/: DepthAlignmentResult.cpp  FrameBuildResult.cpp  FrameIngestResult.cpp  K4aDepthAligner.cpp  K4aDepthAlignmentValidator.cpp  K4aFrameAssembler.cpp  K4aFrameValidator.cpp  MonotonicTimestamp.cpp
src/capture/src/interfaces/: CameraInterface.cpp  K4aInterface.cpp  k4a.cpp
src/capture/src/types/: Image.hpp
src/capture/tests/: CMakeLists.txt  CameraCapture.cpp
src/capture/tests/capture/camera/: CameraCapture.cpp
src/capture/tests/capture/config/: K4aConfig.cpp
src/capture/tests/capture/frame/: FrameIngestor.cpp  FrameIngestorRunner.cpp  K4aFrameBuilder.cpp
src/model/: CMakeLists.txt
src/model/include/model/frame/: FrameStore.hpp
src/model/include/model/frame/types/: camera.hpp  frame.hpp  identity.hpp  image.hpp  lifecycle.hpp  packet.hpp  store_status.hpp  submission.hpp
src/model/include/model/scene/: README.md  SceneAccess.hpp  SceneVersionStore.hpp  SharedScene.hpp
src/model/include/model/viewer/: README.md  RenderOutputStore.hpp  ViewerPoseStore.hpp
src/model/src/frame/: FrameStore.cpp
src/model/src/frame/queue/: FramePacketQueue.cpp  ReadyFrameQueue.cpp
src/model/src/frame/state/: FrameHistory.cpp  FrameLifecycleTracker.cpp
src/model/src/frame/utils/: FrameValidator.cpp  Submission.cpp
src/model/src/scene/: SceneAccess.cpp  SceneVersionStore.cpp  SharedScene.cpp
src/model/src/scene/state/: SceneAccessLease.cpp  SceneVersionHistory.cpp  SharedSceneState.cpp
src/model/src/viewer/: RenderOutputStore.cpp  ViewerPoseStore.cpp
src/model/tests/: CMakeLists.txt
src/model/tests/model/frame/: FrameStore.cpp
src/model/tests/model/scene/: SceneVersionStore.cpp  SharedScene.cpp
src/model/tests/model/viewer/: RenderOutputStore.cpp  ViewerPoseStore.cpp
src/reconstruction/: CMakeLists.txt
src/reconstruction/include/interfaces/: GaussianResidualModel.hpp  ReconstructionPipeline.hpp  TsdfRaycaster.hpp
src/reconstruction/include/reconstruction/: ReconstructionPipeline.hpp  TorchGaussianResidualModel.hpp
src/reconstruction/include/types/: BufferView.hpp  HybridTypes.hpp  OptimizationObservationSet.hpp  ReconstructionObservation.hpp  ReconstructionPipelineConfig.hpp  TorchGaussianBackendConfig.hpp  TsdfTypes.hpp
src/reconstruction/src/gaussian/: TorchGaussianResidualModel.cpp
src/reconstruction/src/interfaces/: GaussianResidualModel.cpp  ReconstructionPipeline.cpp  TsdfRaycaster.cpp
src/reconstruction/src/reconstruction/: ReconstructionPipeline.cpp
src/reconstruction/tests/: BufferView.cpp  CMakeLists.txt  HybridTypes.cpp  ReconstructionContracts.cpp
src/reconstruction/tests/interfaces/: GaussianResidualModel.cpp  ReconstructionPipeline.cpp  TsdfRaycaster.cpp
src/reconstruction/tests/reconstruction/: ReconstructionContracts.cpp  ReconstructionPipeline.cpp  TorchGaussianResidualModel.cpp
src/reconstruction/tests/types/: BufferView.cpp  OptimizationObservationSet.cpp  ReconstructionObservation.cpp  ReconstructionPipelineConfig.cpp  TorchGaussianBackendConfig.cpp  TsdfTypes.cpp
src/streaming/: CMakeLists.txt  RenderServer.cpp  RenderServer.hpp
src/streaming/include/streaming/: RenderServer.hpp
src/streaming/src/streaming/: RenderServer.cpp
src/streaming/webrtc/: CMakeLists.txt  README.md
src/streaming/webrtc/src/: FrameSource.cpp  PipelineBuilder.cpp  SignallingHandler.cpp  WebRtcServer.cpp
src/streaming/webrtc/src/utils/: PoseUpdateHandler.cpp
src/streaming/webrtc/tests/: CMakeLists.txt  FrameSourceTests.cpp  PipelineBuilderTests.cpp
src/streaming/webrtc/tests/utils/: PoseUpdateHandler.cpp
src/viewer/: CMakeLists.txt
src/viewer/include/viewer/: README.md  SceneViewer.hpp  SceneViewerRunner.hpp  ViewerRunner.hpp
src/viewer/include/viewer/types/: runner.hpp
src/viewer/src/: SceneViewer.cpp  SceneViewerRunner.cpp  ViewerRunner.cpp
src/viewer/src/state/: InfiniTamViewerPipeline.cpp
src/viewer/tests/: CMakeLists.txt
src/viewer/tests/viewer/: SceneViewer.cpp  SceneViewerRunner.cpp  ViewerRunner.cpp  test_scene.hpp
toolchain-tests/10-cuda-runtime/: CMakeLists.txt  main.cpp
toolchain-tests/20-libtorch/: CMakeLists.txt  main.cpp
(+83 files in other folders)
